# task1_point

./: CMakeLists.txt  README.md  contributors.txt  readme.md
docs/course_info/: README.md
src/: CMakeLists.txt  main.cpp  xipoint.cpp  xipoint.h
src/src/: CMakeLists.txt  main.cpp  xipoint.cpp  xipoint.h
src/tests/: CMakeLists.txt  point_array_test.cpp  point_test.cpp
tests/: CMakeLists.txt  point_array_test.cpp  point_test.cpp
